Added functionality to user component (ratings history, search history, titlebookmarks).

--- a/Portfolio-2/WebService/wwwroot/js/components/user/user.html
+++ b/Portfolio-2/WebService/wwwroot/js/components/user/user.html
@@ -1,11 +1,8 @@
-<div class="container, user-container">
+<div class="user-container">
 
 
 
-    <div class="alert alert-dismissible alert-success" data-bind="visible: settingsSaved">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        <strong></strong> <a href="#" class="alert-link">Settings has been saved</a>.
-    </div>
+
     
  <div class="row">
  
@@ -25,7 +22,7 @@
                 <h5 class="mx-4 my-5">First name: <span class="mx-1 my-5" data-bind="text: firstName"></span></h5>
                 <h5 class="mx-4 my-5 flex-column">Last name: <span class="mx-1 my-5" data-bind="text: lastName"></span></h5>
                 <h5 class="mx-4 my-5">E-mail: <span class="mx-1 my-5" data-bind="text: email"></span></h5>
-                <h5 class="mx-4 my-5">Username: <span class="mx-1 my-5" data-bind="text: username"></span></h5>
+                <h5 class="mx-4 my-5">Username: <span class="mx-1 my-5" data-bind="text: userName"></span></h5>
             <h5 class="mx-4 my-5">Password: <span class="mx-1 my-5" data-bind="text: "></span></h5>
 
             <div class="buttons border-bottom">
@@ -33,6 +30,7 @@
                 <button data-bind="click: saveSettings, enable: editMode" type="button" class="btn btn-primary border mx-2 my-3">Save</button>
                 <button data-bind="click: isBookmarksMode" type="button" class="btn btn-primary border mx-2 my-3">Bookmarks</button>
                 <button data-bind="click: isSearchHistoryMode" type="button" class="btn btn-primary border mx-2 my-3">Search History</button>
+                <button data-bind="click: isRatingsMode" type="button" class="btn btn-primary border mx-2 my-3">Ratings</button>
             </div>
 
                   
@@ -52,7 +50,7 @@
         <h5 class="mx-4 my-5">First name: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: firstName"></h5>
         <h5 class="mx-4 my-5 flex-column">Last name: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: lastName"></h5>
         <h5 class="mx-4 my-5">E-mail: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: email"></h5>
-        <h5 class="mx-4 my-5">Username: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: username"></h5>
+        <h5 class="mx-4 my-5">Username: <span class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: userName"></span></h5>
         <h5 class="mx-4 my-5">Password: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: password"></h5>
         <h5 class="mx-4 my-5">Password: <input class="mx-1 border-left-0 border-right-0 border-top-0" data-bind="value: password2"></h5>
         
@@ -72,7 +70,13 @@
             <button data-bind="click: saveSettings, enable: editMode" type="button" class="btn btn-primary border mx-2 my-3">Save</button>
             <button data-bind="click: isBookmarksMode, enable: showBookmarks" type="button" class="btn btn-primary border mx-2 my-3">Bookmarks</button>
             <button data-bind="click: isSearchHistoryMode, enable: showSearchHistory" type="button" class="btn btn-primary border mx-2 my-3">Search History</button>
-        
+            <button data-bind="click: isRatingsMode, enable: showRatings" type="button" class="btn btn-primary border mx-2 my-3">Ratings</button>
+            
+        </div>
+
+        <div class="alert alert-dismissible alert-success" data-bind="visible: settingsSaved">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <strong></strong> <a href="#" class="alert-link">Settings has been saved</a>.
         </div>
 
      
@@ -84,12 +88,7 @@
 
  </div>
 
-<!--
-    <div class="buttons bookmarks_searchHistory">
-        <button data-bind="click: isBookmarksMode, enable: showBookmarks" type="button" class="btn btn-primary border mx-2 my-3">Bookmarks</button>
-        <button data-bind="click: isSearchHistoryMode, enable: showSearchHistory" type="button" class="btn btn-primary border mx-2 my-3">Search History</button>
-    </div>
-        -->
+
         <div class="row">
     <div class="card text-white bg-info mb-3 row my-3 mx-4" style="max-width: 15rem; max-height: 13rem;">
         <div class="card-header">- Michael Corleone </div>
@@ -100,84 +99,49 @@
     </div>
 
             <div class="col">
-    <div class="bookmark-history" data-bind="visible: showBookmarks">
-        <h2 class="px-2">Booksmarks</h2>
-        <table class="table table-hover table-borderless table-dark mx-4">
-            <thead>
-            <tr>
-                <th scope="col">Bookmarks</th>
-                <th scope="col">Title</th>
-                <th scope="col">Rating</th>
-                <th scope="col">Comment</th>
-            </tr>
-            </thead>
-            <tbody>
+                
+                <div class="bookmark-history" data-bind="visible: showBookmarks">
+                <h2 class="px-2">Booksmarks</h2>
+                    <table class="table table-hover table-borderless table-dark mx-4 table-striped">
+                <thead>
+                <tr><th>tconst</th><th>Timestamp</th></tr>
+                </thead>
+                        <tbody data-bind="foreach: finalTitleBookmarksList">
+                        <td data-bind="text: tconst"></td>
+                        <td data-bind="text: timestamp"></td>
+                        
+                    </table>
+                </div>
 
+                <div class="search_history my-5" data-bind="visible: showSearchHistory">
+                    <h2 class="px-2">Search history</h2>
+                    <table class="table table-hover table-borderless table-dark mx-4 table-striped">
+                        <thead>
+                        <tr><th>Search</th><th>Timestamp</th></tr>
+                        </thead>
+                        <tbody data-bind="foreach: finalSearchList">
+                        <td data-bind="text: search"></td>
+                        <td data-bind="text: timeStamp"></td>
+                        </tbody>
+                    </table>
+                </div>
+         
 
-            <tr class="table-primary">
-                <th scope="row">Primary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-dark">
-                <th scope="row">Secondary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-primary">
-                <th scope="row">Primary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-dark">
-                <th scope="row">Secondary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    
-    <div class="search_history my-5" data-bind="visible: showSearchHistory">
-<h2 class="px-2">Search history</h2>
-        <table class="table table-hover table-borderless table-dark mx-4">
-            <thead>
-            <tr>
-                <th scope="col">Search</th>
-                <th scope="col">Timestamp</th>
-            </tr>
-            </thead>
-            <tbody>
-
-
-            <tr class="table-primary">
-                <th scope="row">Primary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-dark">
-                <th scope="row">Secondary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-primary">
-                <th scope="row">Primary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            <tr class="table-dark">
-                <th scope="row">Secondary</th>
-                <td>Column content</td>
-                <td>Column content</td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-
+                <div class="search_history my-5" data-bind="visible: showRatings">
+                    <h2 class="px-2">Rating history</h2>
+                    <table class="table table-hover table-borderless table-dark mx-4 table-striped">
+                        <thead>
+                        <tr><th>tconst</th><th>Timestamp</th><th>Rating</th><th>Review</th></tr>
+                        </thead>
+                       <tbody data-bind="foreach: finalRatingList">
+                       <td data-bind="text: tconst"></td>
+                       <td data-bind="text: timestamp"></td>
+                       <td data-bind="text: rating"></td>
+                       <td data-bind="text: review"></td>
+                       
+                       </tbody>
+                    </table>
+                </div>
            </div>
         
         
